@@ -8,6 +8,7 @@
   Closes: SF bug #2977749
 * Added support for the lbzip2 program handling BZIP2 archives.
 * Added support for the plzip program handling LZIP archives.
+* Prevent overwriting the same file with repack.
 
 
 0.15 "Contraband" (released 8.4.2012)
